--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
-python-3.11.8
 streamlit==1.29.0
-numpy==1.26.0
-pandas==2.0.3
-scikit-learn==1.3.0
-pickle5==0.0.12
-matplotlib==3.8.0
-seaborn==0.12.3
-plotly==5.18.0
-
+pandas
+numpy
+seaborn
+scikit-learn
+matplotlib
